--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -30,4 +32,4 @@
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
-}
+} 
